Project 4/lab4.txt
Cindi Dong
Lab 2

1. Building Coreutils without Patch:
Commands:
wget https://web.cs.ucla.edu/classes/winter20/cs35L/assign/coreutils-with-bug.tar.gz
tar -xzvf coreutils-with-bug.tar.gz
mkdir tempCoreutilsBug
cd coreutils-with-bug/
./configure --prefix=/u/be/ugrad/cindi/tempCoreutilsBug
make
make install

Error:
In file included from utimecmp.c:41:0:
utimens.h:2:5: error: conflicting types for 'futimens'
 int futimens (int, char const *, struct timespec const [2]);
     ^
In file included from utimecmp.h:25:0,
                 from utimecmp.c:25:
/usr/include/sys/stat.h:373:12: note: previous declaration of 'futimens' was here
 extern int futimens (int __fd, const struct timespec __times[2]) __THROW;
            ^
make[2]: *** [utimecmp.o] Error 1
make[2]: Leaving directory `/w/home.06/be/ugrad/cindi/coreutils-with-bug/lib'
make[1]: *** [install] Error 2
make[1]: Leaving directory `/w/home.06/be/ugrad/cindi/coreutils-with-bug/lib'
make: *** [install-recursive] Error 1

This error occurs because there are two different functions 
that have the name futimens in file. Both make and 
make install give this error.



2. Building Coreutils with Patch:
Commands:
wget https://web.cs.ucla.edu/classes/winter20/cs35L/assign/coreutils.diff
patch -p0 < coreutils.diff

Output:
patching file lib/utimens.c
patching file lib/utimens.h
patching file src/copy.c
patching file src/tee.c
patching file src/touch.c

make
make install

There were no errors. This is because the patch changes the name of the 
futimens function in the lib/utimens.c and lib/utimens.h, so there aren't 
two functions with the same name anymore.



3. Reproducing the Problem:
Commands:
cd tempCoreutilsBug
tmp=$(mktemp -d)
cd $tmp
touch -d '1918-11-11 11:00 GMT' wwi-armistice-cs35L
touch now
sleep 1
touch now1
Output:
TZ=UTC0 ~/tempCoreutilsBug/bin/ls -lt --full-time wwi-armistice-cs35L now now1
-rw-r--r-- 1 cindi beugrad 0 1918-11-11 11:00:00.000000000 +0000 wwi-armistice-cs35L
-rw-r--r-- 1 cindi beugrad 0 2020-02-08 12:59:21.297085981 +0000 now1
-rw-r--r-- 1 cindi beugrad 0 2020-02-08 12:59:14.641969533 +0000 now
cd
rm -fr $tmp



4. Debugging:
Commands:
gdb ~/tempCoreutilsBug/bin/ls
//searched for any functions that dealt with comparing time 
//and found compare_mtime
(gdb) info functions
//set breakpoint for compare_mtime
(gdb) b compare_mtime
//ran to debug
(gdb) r -lt
//step through
(gdb) s
//brings us to timespec_cmp
(gdb) s
Output: (timespec_cmp (b=..., a=...) at ../lib/timespec.h:48); 
this shows us that timespec_cmp is located in timespec.h.
(gdb) list
(gdb) q



5. Fixing the Error:
Commands:
cp ~/coreutils-with-bug/lib/timespec.h .
emacs timespec.h
C-s timespec_cmp

Old:
timespec_cmp (struct timespec a, struct timespec b)
{
  int diff = a.tv_sec - b.tv_sec;
  return diff ? diff : a.tv_nsec - b.tv_nsec;
}

New:
timespec_cmp (struct timespec a, struct timespec b)
{
    if (a.tv_sec > b.tv_sec)
    {
        return 1;
    }
    else if (a.tv_sec < b.tv_sec)
    {
        return -1;
    }
    else {
        if (a.tv_nsec > b.tv_nsec)
        {
            return 1;
        }
        else if (a.tv_nsec < b.tv_nsec)
        {
            return -1;
        }
        else
        {
            return 0;
        }
    }
}

This error occurs because the original implementation of the function 
used subtraction to compare the times. This can lead to overflow if the times 
differ by a lot. In addition, tv_sec is measured beginning from Jan 1, 1970. 
This means that if a file was modified a long time before, it could be a large 
negative number. This leads to overflow as well. These issues can be solved 
by just replaced subtraction with a comparison.



6. Creating the Patch File:
Commands:
diff -u ~/coreutils-with-bug/lib/timespec.h timespec.h > lab4.diff
emacs lab4.diff
C-x 4-a   (creating ChangeLog entry)
C-x C-s C-x C-c



7. Reproducing on SEASnet:
Commands:
mkdir tmp
cd tmp
touch -d '1918-11-11 11:00 GMT' wwi-armistice-cs35L
touch now
sleep 1
touch now1
ls -lt --full-time wwi-armistice-cs35L now now1
Output:
-rw-r--r-- 1 cindi beugrad 0 2054-12-17 09:28:16.000000000 -0800 wwi-armistice-cs35L
-rw-r--r-- 1 cindi beugrad 0 2020-02-08 22:07:17.556254000 -0800 now1
-rw-r--r-- 1 cindi beugrad 0 2020-02-08 22:07:12.447532000 -0800 now

Using the already installed ls utilities on SEASnet shows the file
wwi-armistice-cs35L as modified on 12/17/2054. This is because 
the original date is out of the range of representable numbers 
on the SEASnet servers.
